--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <footer class="footer bg-dark text-light text-center py-3">
       <div class="container1">
           <p>&copy; Visit my social media account</p>
-          <a href="" class="button" style="color: white; text-decoration: none;"><img src="img/facebook.svg" style="height: 20px; width: 20px; margin-right: 10px;">Facebook</a>
+          <a href="https://www.facebook.com/johnpaul.mangubat.50" class="button" style="color: white; text-decoration: none;"><img src="img/facebook.svg" style="height: 20px; width: 20px; margin-right: 10px;">Facebook</a>
       </div>
   </footer>
   </footer>
